# ClientL

./: .env.in  .gitignore  CMakeLists.txt  ClientL.code-workspace  README.md  binding.gyp  index.html  package-lock.json  package.json  vcpkg-configuration.json  vcpkg.json  xvcpkg.json
include/ClientL/: ClientL.h  ClientLConfig.h
scripts/: hyperv.bat
src/: ClientL.cpp  index.js  logger.js  repl.js  server.js
src/button/: button.css  button.js
src/database/: db_connect.js  db_create.js  db_table.js
support/: .in.env  ClientLConfig.in.h
support/cmake/: CMakeDefaultPresets.json  CMakeVendorPresets.json  clean-all.cmake
support/cmake/linux/: CMakeBuildPresets.json  CMakeConfigurePresets.json  CMakeDebugPresets.json  CMakeLinuxPresets.json  CMakeVendorPresets.json  Linux_CMakeConfigurePresets.json
support/cmake/windows/: CMakeBuildPresets.json  CMakeConfigurePresets.json  CMakeDebugPresets.json  CMakeVendorPresets.json  CMakeWindowsPresets.json  Windows_CMakeConfigurePresets.json
support/scripts/Bash/: WSL.sh  gitcreds.sh
support/vcpkg/: vcpkg.in.json
